--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 		<button>Click me!</button>
 		<h1>My header</h1>
-		<section style='background-color: silver;'>
+		<section>
 			<h2>My subheading 1</h2>
 			<p>Manual DOM manipulation is messy and keeping track of the previous DOM state is hard. A solution to this problem is to write your code as if you were recreating the entire DOM whenever state changes. Of course, if you actually recreated the entire DOM every time your application state changed, your app would be very slow and your input fields would lose focus.</p>
 		</section>
