--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script src='./build/main.js'></script>
 		<title>Virtual DOM</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			* {
 				box-sizing: border-box;
